--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "bioUrl": "public/page/about.md",
+  "bioUrl": "https://raw.githubusercontent.com/hari-jeya/terminal/master/public/pages/about.md",
   "social": {
     "instagram": "rudra.raw",
     "github": "hari-jeya ",
