maj commade et autre details

--- a/config.json
+++ b/config.json
@@ -5,6 +5,6 @@
     "github": "hari-jeya ",
     "linkedin": "hari-jeyakrishnan"
   },
-  "theme": "obsidian",
+  "theme": "Obsidian",
   "border": true
 }
