--- a/config.json
+++ b/config.json
@@ -1,9 +1,27 @@
 {
-  "bioUrl": "https://raw.githubusercontent.com/hari-jeya/terminal/master/pages/about.md",
   "social": {
     "instagram": "rudra.raw",
-    "github": "hari-jeya ",
-    "linkedin": "hari-jeyakrishnan"
+    "github": "hari-jeya",
+    "linkedin": "hari-jeyakrishnan",
+    "email":"hari.jeya@outlook.fr"
+  },
+  "site": {
+    "name": "Terminal",
+    "version": "1.93.0",
+    "license": "MIT"
+  },
+  "author": {
+    "name": "Hariharan JEYAKRISHNAN",
+    "url": "https://hari.jeyakrishnan.fr",
+    "email": "hari.jeya@outlook.fr"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hari-jeya/terminal"
+  },
+  "funding": {
+    "type": "url",
+    "url": "https://google.fr"
   },
   "theme": "Obsidian",
   "border": true
